--- a/templates/Detail/Relocation.html.twig
+++ b/templates/Detail/Relocation.html.twig
@@ -8,7 +8,7 @@
 
 {% block body %}
 
- <section id="{{ titre }}" class="content details" data-id="active_content">
+<section id="{{ titre }}" class="content details standard" data-id="active_content">
     <a href="/accueil" id="logo_top"><img src="../img/logo-french.png" alt="Logo de MyFrenchHub"></a>
     <h1><a href="/accueil" class="return"><</a>{{ titre }}</h1>
     <div class="details_content">
