--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -23,7 +23,7 @@
          <div id="formule" >
              <h3>Devenez membre de MyFrenchHub <br> à partir de 199€ /an</h3><br>
           <form action="/adhesion" method="post">
-              de 1 à 50 salariés  199€<input type="checkbox" name="option" value="1">  <br>
+                  de 1 à 50 salariés  199€<input type="checkbox" name="option" value="1">  <br>
                   de 50 à 249 salariés   399€<input type="checkbox" name="option" value="2">  <br>
                   de 250 à 1000 salariés  599€<input type="checkbox" name="option" value="3"> <br>
                     plus de 1000 salariés  1099€<input type="checkbox" name="option" value="4"> <br>
@@ -34,7 +34,7 @@
        
             <label for='societe'>Nom entreprise :</label>  <input type='text' name='societe' required><br>
             <label for="activite">domaine d'activitée</label> : <input type='text' name='activite' ><br> 
-             <label for="salarier">Nombres de salariés concernées :</label> 
+             <label for="salarier">Nombres de salariés :</label> 
             <select name="salarier">
                                                     <option value="1">1 à 49</option> 
                                                     <option value="2">50 à 249</option> 
