--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -1,18 +1,21 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+       {{parent()}}| <link rel="stylesheet" type="text/css" href="css/formulaire.css " />          
+{% endblock %}
 {% block body %}
-     <div id="petitlogo">
-        <a href="/accueil" ><img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub"></a>
-        </div> 
-    <section id="formEnt" class="content">
+    <div class="content standard" >
+         <a href="/accueil" id="logo_top"><img src="../img/logo-french.png" alt="Logo de MyFrenchHub"></a>
+    </div>
         <br>
-        {% if(mess !=null) %}
-            <span> {{mess}}</span>
-        {% endif%}
+      
+               <section id="formEnt" class="content">
+                {% if(mess !=null) %}
+                     <span class="mess"> {{mess}}</span>
+               {% endif%}
+        <div id="entr">
          <form action="/devisEnregistrement" method="post" role="form">
-  
-                        <h2> INFORMATION GENERAL </h2>
+                          <h2> INFORMATION GENERAL </h2>
                                
                         <label for='societe'>Nom de l'entreprise :</label>  <input type='text' name='societe'  required><br>
                         <label for="activité">Domaine d'activité </label> : <input type="text"  name="activite"  > <br>
@@ -25,8 +28,9 @@
                                                                      <option value="{{pays.nom_fr_fr}}">{{pays.nom_fr_fr}}</option> 
                                                     {% endfor%}
                                      </select> <br>
-                                      <label for="siren">Siren</label> :   <input type="text" name="siren" class="form-control" >   <br><br>
-                                      
+                                     <div id="siren">
+                                         <label for="siren">Siren</label> :   <input type="text" name="siren" class="form-control"  >   <br><br>
+                                     </div>
                                       <h2> Contact </h2>
                                                 <label for="opt1">Mr</label><input required type="radio" name="civilite" value="0"  /><br>
                                              <label for="opt2">Mme</label> <input required type="radio" name="civilite" value="1" />
@@ -42,7 +46,7 @@
                                                      <option value="3">250 à 1000</option> 
                                                       <option value="4">plus de 1000</option> 
                                               </select><br><br>
-                               
+            </div>                   
                            <h2>ASSISTANCE AU DEPART / ARRIVEE</h2>
                             
                              <input type="checkbox" name="option1" value="1"> Voyage d'orientation, reconnaissance<br>
