--- a/templates/Detail/recontacter.html.twig
+++ b/templates/Detail/recontacter.html.twig
@@ -1,8 +1,20 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+       {{parent()}}| <link rel="stylesheet" type="text/css" href="css/formulaire.css " />          
+{% endblock %}
 {% block body %}
-<section id="community" class="content" data-id="active_content">
- <form method='post' action='/contact'>
+    
+    <div class="content standard" >
+         <a href="/accueil" id="logo_top"><img src="../img/logo-french.png" alt="Logo de MyFrenchHub"></a>
+    </div>
+    {% if (message3 !=null ) %}
+          <span class="mess"> {{ message3 }} </span>
+    {% endif %}
+    
+ <section class="milieu" >
+     <h1>Etre recontacter</h1><br>
+            <form method='post' action='/contact'>
                     <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
                     <label for="contact">Contact principal</label> :   <input type="text" name="contact" required>   <br>
                     <label for="fonction">Fonction</label> :   <input type="text" name="fonction" required>  <br> 
@@ -13,18 +25,13 @@
                                             <option value="value1">{{pays.nom_fr_fr}}</option> 
                             {% endfor%}
                         </select><br>
-                    <label for="Tel">Tel</label> :   <input type="tel" name="tel" required >   <br>
+                        <label for="Tel">Tel</label> :   <input type="tel" name="tel" required >   <br><br>
                     <input type="submit" name="valider" value="valider">
                
                 </form>
                         
-         {% if (message3 !=null ) %}
-                        <div>
-                            {{ message3 }}
-                        </div>
-                    {% endif %}
-                    
-                    </section>
+       
+  </section>
                         
        {% endblock%}
                             
