--- a/templates/entreprise.html.twig
+++ b/templates/entreprise.html.twig
@@ -1,20 +1,22 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
-        
+     {% block stylesheets %}
+       {{parent()}}| <link rel="stylesheet" type="text/css" href="css/formulaire.css " />          
+{% endblock %}
+
 {% block body %}
+    <div class="content standard" >
+    <a href="/accueil" id="logo_top"><img src="../img/logo-french.png" alt="Logo de MyFrenchHub"></a>
+    </div>
     
+     <section id="formEnt" class="content">
       {% if( message is not empty)  %}
-                <span>Le nouveau salarié a bien été enregistré<br>
+                <span class="mess">Le nouveau salarié a bien été enregistré<br>
                              Le login : {{message.username}} <br>
                               le mot de passe est : {{message.motpass}}
                 </span><br>
                               
          {% endif %}
-    
-    <div id="petitlogo">
-        <a href="/accueil" ><img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub"></a>
-        </div> 
-    <section id="formEnt" class="content">
         <br>
         <form >
     {% for item in donnee %}
