--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@ h2 { font-size: 1em;}
 p { font-size: 1em;}
 ul { list-style: none;}
 a { text-decoration: none;}
+input, textarea, select { color: #7d7d7d;}
 
 /* Menu */
 .menu-btn-active { display: none;}
@@ -158,13 +159,27 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 .details .devis a { padding: 10px 20px; border-radius: 5px; background-color: #f1696b; color: #fff;}
 
 /* SIGN_UP PAGE */
-section input { padding: 10px 15px; border: 1px solid #7d7d7d;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
-#sign_up_content, #formule, #entr, #contact { display: inline-block; vertical-align: top; width: 50%; padding: 50px;}
+.register p, .register h3 { text-align: center;}
+#sign_up_content, #formule { display: inline-block; vertical-align: top; width: 50%; padding: 50px;}
 #sign_up_content h2 { color: #f1696b;}
-#sign_up_content p { margin-top: 20px;}
-#formule h3, #formule p { text-align: center;}
-#formule p { margin: 20px 0 60px;}
-#formule div { width: 100%; height: 30px; line-height: 30px; margin: 40px 0;}
-#formule label { display: inline-block; width: 150px; height: 100%; padding: 0 10px; border: 1px solid #7d7d7d; border-radius: 5px;}
-#formule span { margin: 0 20px 0 80px;}
-#formule input { float: right; margin-top: 11px;}
+#sign_up_content p { margin-top: 20px; text-align: left;}
+#newsLetter { margin-left: 10px;}
+.form h3 { position: relative; margin: 40px 0;}
+.form h3:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
+.register .full table { display: inline-block; vertical-align: top; width: 33.33%;}
+.register .full table td { display: inline-block; padding-left: 30px; margin: 10px 0;}
+
+/* FORM */
+.form .left, .form .right { display: inline-block; vertical-align: top; width: 50%; margin: 20px 0;}
+.form .left { padding: 20px 20px 20px 0;}
+.form .right { padding: 20px 0 20px 20px;}
+.form .left tr, .form .right tr { width: 100%;}
+.form .left td, .form .right td { display: inline-block; width: 50%; margin: 10px 0;}
+.form .full { width: 100%; padding: 20px;}
+.form input[type="submit"] { float: right; padding: 10px 50px; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer;}
+.form .champs { text-align: left;}
+
+.form input { padding: 5px 15px; border: 1px solid #eee;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
+.form select { max-width: 100%;}
+
+
