--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,27 +159,31 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 .details .devis a { padding: 10px 20px; border-radius: 5px; background-color: #f1696b; color: #fff;}
 
 /* SIGN_UP PAGE */
-.register p, .register h3 { text-align: center;}
-#sign_up_content, #formule { display: inline-block; vertical-align: top; width: 50%; padding: 50px;}
 #sign_up_content h2 { color: #f1696b;}
 #sign_up_content p { margin-top: 20px; text-align: left;}
+.content h3 { position: relative; margin: 40px 0;}
+.content h3:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
 #newsLetter { margin-left: 10px;}
-.form h3 { position: relative; margin: 40px 0;}
-.form h3:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
-.register .full table { display: inline-block; vertical-align: top; width: 33.33%;}
+#formule table td, .register .full table { display: inline-block; vertical-align: top; width: 33.33%;}
+#formule table td { padding: 5px 10px;}
+#formule table td:nth-child(1) { width: 60%; border: 1px solid #7d7d7d; border-radius: 5px;}
+#formule table td:nth-child(2) { width: 30%; padding-right: 5px; text-align: right;}
+#formule table td:nth-child(3) { width: 10%;}
+#formule p { margin: 20px 0 40px;}
 .register .full table td { display: inline-block; padding-left: 30px; margin: 10px 0;}
 
 /* FORM */
+.form p, .form h3 { text-align: center;}
+.form table tr td p { text-align: left;}
 .form .left, .form .right { display: inline-block; vertical-align: top; width: 50%; margin: 20px 0;}
 .form .left { padding: 20px 20px 20px 0;}
 .form .right { padding: 20px 0 20px 20px;}
-.form .left tr, .form .right tr { width: 100%;}
+.form .left table, .form .right table { width: 100%;}
 .form .left td, .form .right td { display: inline-block; width: 50%; margin: 10px 0;}
 .form .full { width: 100%; padding: 20px;}
 .form input[type="submit"] { float: right; padding: 10px 50px; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer;}
-.form .champs { text-align: left;}
-
 .form input { padding: 5px 15px; border: 1px solid #eee;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
 .form select { max-width: 100%;}
+.form .champs { text-align: left;}
 
 
