--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -1,10 +1,9 @@
-
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
 
 {% block body %}
 
-    <section class="form register standard" data-id="active_content">
+    <section class="form content register standard" data-id="active_content">
         <a href="/accueil" id="logo_top"><img src="../img/logo-french.png" alt="Logo de MyFrenchHub"></a>
         {% if (message2 !=null ) %}
           <span class="mess">{{ message2 }}</span>
@@ -70,7 +69,7 @@
                 </table>
         </div>
     </section>
-    <section class="form content standard register">
+    <section class="form form_content standard register">
         <h1>Je crée mon compte</h1>
         <table class="left">
             <tr>
