--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,8 @@ h1 { font-size: 2em;}
 h2 { font-size: 1em;}
 p { font-size: 1em;}
 ul { list-style: none;}
-a { text-decoration: none;}
+a { text-decoration: none; transition: all 500ms;}
+a:hover { color: #7d7d7d !important;}
 input, textarea, select { color: #7d7d7d;}
 
 /* Menu */
@@ -124,6 +125,8 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 #mobility ul li:nth-child(4) { background: url(../img/picto/home_mobility/picto-immigre.png) no-repeat;}
 #mobility ul li:nth-child(5) { background: url(../img/picto/home_mobility/picto-famille.png) no-repeat;}
 #community img { display: inline-block; max-width: 60%;}
+
+/* FOOTER */
 #footer_info, #footer_mention, #footer_society, #footer_newsletter, #footer_hub, #footer_partner { display: inline-block; vertical-align: top; height: 33%; padding: 20px; text-align: center;}
 #footer_info, #footer_mention, #footer_society { width: 33.33%;}
 #footer_mention ul { border-left: 1px solid #fff8e7; border-right: 1px solid #fff8e7;}
@@ -133,10 +136,14 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 #footer_newsletter p, #footer_hub p { margin: 10px;}
 #footer_newsletter input[type="mail"] { margin-top: 20px; padding: 5px 3px; border: none; border-radius: 5px;}
 #footer_newsletter input[type="submit"] { background-color: inherit; border: none; color: #fff8e7; cursor: pointer;}
-#footer_hub ul li { display: inline-block; height: 54px; text-indent: -9999px;}
-#footer_hub ul li:nth-child(1) { width: 30px; background: url(../img/picto/sprite-reseaux.png) no-repeat top left;}
-#footer_hub ul li:nth-child(2) { width: 37px; margin: 0 50px; background: url(../img/picto/sprite-reseaux.png) no-repeat 47% top;}
-#footer_hub ul li:nth-child(3) { width: 45px; background: url(../img/picto/sprite-reseaux.png) no-repeat 98% top;}
+#footer_hub ul li { display: inline-block; height: 54px;}
+#footer_hub ul li a { display: block; width: 100%; height: 100%; text-indent: -9999px;}
+#footer_hub ul li:nth-child(1) a { width: 30px; background: url(../img/picto/sprite-reseaux.png) no-repeat top left;}
+#footer_hub ul li:nth-child(1) a:hover { background: url(../img/picto/sprite-reseaux.png) no-repeat left 105%;}
+#footer_hub ul li:nth-child(2) a { width: 37px; margin: 0 50px; background: url(../img/picto/sprite-reseaux.png) no-repeat 47% top;}
+#footer_hub ul li:nth-child(2) a:hover { background: url(../img/picto/sprite-reseaux.png) no-repeat 47% 105%;}
+#footer_hub ul li:nth-child(3) a { width: 45px; background: url(../img/picto/sprite-reseaux.png) no-repeat 98% top;}
+#footer_hub ul li:nth-child(3) a:hover { background: url(../img/picto/sprite-reseaux.png) no-repeat 98% 105%;}
 #footer_partner { width: 100%;}
 #footer_partner ul li { display: inline-block; margin: 10px 5%; vertical-align: middle;}
 #footer_partner ul li a { display: block; text-indent: -9999px;}
@@ -153,16 +160,15 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 .standard .return { position: absolute; display: block; top: 0; left: 0; width: 16px; height: 27px; background: url(../img/picto/fleche-retour.png) no-repeat; text-indent: -9999px;}
 
 .details .details_content { width: 80%; margin: 0 auto; padding: 20px; border: 1px solid #f1696b; border-radius: 20px;}
-.details h2 { background: url(../img/picto/partenaires/logo-etudiant.png) no-repeat; color: #f1696b;}
-.details .devis { width: 100%; text-align: right;}
-.details .devis p { margin: 20px 0;}
-.details .devis a { padding: 10px 20px; border-radius: 5px; background-color: #f1696b; color: #fff;}
+.details h2 { padding-top: 100px; margin-bottom: 20px; background: url(../img/picto/picto-logement.png) no-repeat 50% 0; color: #f1696b;}
+.details .devis { position: relative; width: 100%; height: 100px; text-align: right;}
+.details .devis p { position: absolute; bottom: 50px; right: 87px;}
+.details .devis a { position: absolute; bottom: 0; right: 20px; padding: 10px 50px; border-radius: 5px; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer; transition: all 1s;}
+.details .devis a:hover { background-color: #7d7d7d; color: #fff !important;}
 
 /* SIGN_UP PAGE */
 #sign_up_content h2 { color: #f1696b;}
 #sign_up_content p { margin-top: 20px; text-align: left;}
-.content h3 { position: relative; margin: 40px 0;}
-.content h3:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
 #newsLetter { margin-left: 10px;}
 #formule table td, .register .full table { display: inline-block; vertical-align: top; width: 33.33%;}
 #formule table td { padding: 5px 10px;}
@@ -170,20 +176,68 @@ section .scroll_down, #scroll_up { background: url(../img/picto/fleche-scroll.pn
 #formule table td:nth-child(2) { width: 30%; padding-right: 5px; text-align: right;}
 #formule table td:nth-child(3) { width: 10%;}
 #formule p { margin: 20px 0 40px;}
-.register .full table td { display: inline-block; padding-left: 30px; margin: 10px 0;}
+
+/* QUOTATION */
+#quotation #part_1 , #quotation #part_2 { margin: 20px 0;}
+#quotation #part_1 table, #quotation #part_2 table { display: inline-block; vertical-align: top;}
+#quotation #part_1 table { width: 33.33%;}
+#quotation #part_1 table:nth-child(2) { border-left: 1px solid #eee; border-right: 1px solid #eee;}
+#quotation #part_2 table:nth-child(1) { width: 66.66%; border-right: 1px solid #eee;}
+#quotation #part_2 table:nth-child(2) { width: 33.33%;}
+#quotation input[type="submit"] { bottom: 70px;}
 
 /* FORM */
 .form p, .form h3 { text-align: center;}
+.form table th { margin-bottom: 10px; font-family: 'y2k_neophyteregular', verdana, sans-serif; color: #f1696b;}
 .form table tr td p { text-align: left;}
 .form .left, .form .right { display: inline-block; vertical-align: top; width: 50%; margin: 20px 0;}
 .form .left { padding: 20px 20px 20px 0;}
 .form .right { padding: 20px 0 20px 20px;}
 .form .left table, .form .right table { width: 100%;}
 .form .left td, .form .right td { display: inline-block; width: 50%; margin: 10px 0;}
+.form_content h3 { position: relative; margin: 40px 0;}
+.form_content h3:after { position: absolute; content: ""; bottom: -20px; left: 0; width: 100%; height: 2px; background-color: #eee;}
+.form .full table td { display: inline-block; padding-left: 30px; margin: 10px 0;}
 .form .full { width: 100%; padding: 20px;}
-.form input[type="submit"] { float: right; padding: 10px 50px; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer;}
-.form input { padding: 5px 15px; border: 1px solid #eee;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
+.form input[type="submit"] { position: absolute; bottom: 20px; right: 20px;; padding: 10px 50px; box-shadow: none; background-color: #f1696b; color: #fff; cursor: pointer; transition: all 1s;}
+.form input[type="submit"]:hover { background-color: #7d7d7d;}
+.form input, .form textarea { padding: 5px 15px; border: 1px solid #eee;  background: none; border-radius: 5px; -webkit-box-shadow: inset 2px 2px 1px 0px #c0c0c0; box-shadow: inset 2px 2px 1px 0px #c0c0c0; filter:progid:DXImageTransform.Microsoft.Shadow(color=#c0c0c0, Direction=134, Strength=1);}
 .form select { max-width: 100%;}
+.form label[for="description"] { display: block; margin-bottom: 10px;}
+.form textarea[id="description"] { max-width: 80%; min-height: 100px; border-radius: 20px;}
 .form .champs { text-align: left;}
 
+/* MESSAGE */
+#siren
+{
+    visibility:hidden;
+}
+#sirenFr
+{
+    visibility: visible;
+}
+.mess
+{
+   width:80%;
+   margin:  auto;
+   padding:1%;
+   background-color: rgba(197,188,163,0.8);
+   font-size: 16px;
+   text-align: center;
+    display: inline-block;   
+}
 
+.milieu
+{
+    width: 40%;
+     margin: auto;
+    text-align: center;
+}
+.milieu form
+{
+    border: solid 1px #717070;
+    padding: 4%;
+    width:80%;
+    margin: auto;
+    text-align: center;
+}
