--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -141,7 +141,7 @@
             </tr>
         </table>
         <p class="champs">* Champs obligatoires</p>
-        <h3>Sélectionner vos besoins</h3>
+        <h3 class="underline">Sélectionner vos besoins</h3>
         <div class="full">
             <div id="part_1">
                 <table>
