--- a/templates/inscription.html.twig
+++ b/templates/inscription.html.twig
@@ -198,7 +198,7 @@
             </tr>
         </table>
         <p><label for="newsLetter">Je souhaite recevoir la newsletter de MyFrenchHub</label><input type="checkbox" name="newsLetter" id="newsLetter" value="Oui"></p>
-        <h3>Les thèmes</h3>
+        <h3 class="underline">Les thèmes</h3>
         <p>En supplément de la newsletter générale, vous pouvez choisir des thèmes sur lesquels vous aimeriez recevoir plus d’informations</p>
         <div class="full">
             <table>
