--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -80,12 +80,7 @@
         <a href="#community" class="scroll_down">scroll</a>
     </section>
     <section id="community" class="content" data-id="active_content">
-        <div>
-            <h1>My french cl'Hub</h1>
-            <p>Cras ultrices risus a ultrices gravida. Integer et tortor at ipsum placerat posuere vitae quis nisi. Aenean nec ipsum eget urna auctor porta id sit amet ligula. Nullam a orci lorem. Nullam dui lectus, ultricies et porttitor non, porta vitae eros. Vestibulum nunc turpis, lacinia sit amet pulvinar non, volutpat vitae tortor? Nulla nec molestie elit; tincidunt molestie mi. Pellentesque porta ligula ex, a aliquet elit posuere et. Duis dapibus placerat risus ultricies ultrices. Fusce ligula tortor, fringilla sed egestas ut, lobortis ut tellus.</p>
-        </div><!--
-     --><img src="img/illustration-french-cl-hub.png" alt="La communauté myFrencHub" />
-        <a href="#footer" class="scroll_down">scroll</a>
+        <img src="img/french-hub-v2-communaute.jpg" alt="La communauté myFrencHub" />
     </section>
         
 {% endblock %}
